--- a/cap2024/src/main/resources/application.properties
+++ b/cap2024/src/main/resources/application.properties
@@ -1,1 +1,27 @@
-spring.application.name=cap2024
+spring.application.name=case_study
+
+
+# Mysql Database Setup
+spring.datasource.url=jdbc:mysql://localhost:3306/case_study
+spring.datasource.username=root
+spring.datasource.password=crazydev123
+
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.auto-commit=true
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
+# Tomcat configuration
+server.servlet.contextPath=/
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+# Logging
+logging.level.com.example.springboot=DEBUG
+logging.level.org.springframework=INFO
