--- a/cap2024/src/main/resources/application.properties
+++ b/cap2024/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=case_study
 
 
 # Mysql Database Setup
-spring.datasource.url=jdbc:mysql://localhost:3306/case_study
+spring.datasource.url=jdbc:mysql://localhost:3306/capstone2024
 spring.datasource.username=root
 spring.datasource.password=crazydev123
 
