--- a/cap2024/pom.xml
+++ b/cap2024/pom.xml
@@ -98,6 +98,10 @@
 			<version>1.2.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
 
 	</dependencies>
 
