--- a/cap2024/pom.xml
+++ b/cap2024/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>cap2024</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Capstone Project - Per Scholas</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -98,6 +98,16 @@
 			<version>1.2.5</version>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
